# rust-minijinja-htmx

./: .dockerignore  .fly-sample.toml  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README  docker-compose.yml  justfile  main.css  package.json  pnpm-lock.yaml  rollup.config.js  tailwind.config.js  tiptap.js
.sqlx/: query-1d1262dc3ac1c9616555caa05cb4afe9b6ab92cfa007e555e722bd19d638a848.json  query-43228284e3a71fee749b4279ea857ba409b31dd0d97ea5bc1f52fedfe6a1f53d.json  query-57441f281e2b787b55168c19a48b2c3f3a81a3e9b643d2cd5011a45ff63f4696.json  query-630151ad0e09812edde894249f7ecc931186768561fd2dfeaf566949ae1f6719.json  query-65cef979ccd7928ad20449c337cfbfe08c17f7d3c6c3240f79fc6ecf9e85bb30.json  query-6967e9d947e71adfbd29284d576bef382c36a5805c9b7703f4c08cb54af0d6fb.json  query-7086e6b11046839eea166076012c0e52ce37ad8e90cc4fbd1a0329115fa39feb.json  query-7844e2a98536a708562422d181242b5e9b167cfbe13c8f71530796328df098f8.json  query-89cb0cd7027e515947ef42387f99eed232161058b5d68a50dbdf814b9168adef.json  query-b96c7ebe28174f2827164234df3f3b109001b9b5759340b1eacdb6ab8ead2442.json  query-c7d438e36da1884562f84d6c3a2efff0fa0347fb539b533bb74da2dfda600fb7.json  query-cd11a97063b526a184192dd3066b67d5bd2363aaeb2ba41cf0b132de51ae8ae8.json  query-ff54a3e93dbd750f93a64ad499057d788d4f3c4557a1147e30901bf29319d7b7.json
auth/: Cargo.toml
auth/src/: axum.rs  google.rs  jwt.rs  lib.rs  models.rs
migrations/: 20231113184419_initial.sql  20231113184730_accounts.sql  20231113191438_posts.sql
public/assets/: platform.css  tiptap.min.js
server/: Cargo.toml
server/src/: error.rs  extractors.rs  main.rs  models.rs
server/src/routes/: app.rs  auth.rs  home.rs  mod.rs  posts.rs  settings.rs
templates/: _base.html  index.html
templates/app/: _layout.html  index.html  messages.html  profile-snippet.html
templates/app/posts/: index.html  post.html
templates/app/posts/settings/: _layout.html  general.html  open-graph.html  seo.html
templates/app/settings/: _layout.html  api-keys.html  site.html
templates/auth/: _base.html  choose.html  sign-in.html
