[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
axum-extra.workspace = true
sqlx.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
once_cell.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true

tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace", "compression-br"] }
minijinja = { version = "1.0.10", features = ["loader"] }
minijinja-contrib = { version = "1.0.10", features = ["datetime"] }
slug = "0.1.5"

auth = { path = "../auth" }